# project-bvv

m-project/barcode-app/: AppController.cpp  DataReceiver.cpp  DataReceiver.h  barcode-app.pro  main.cpp  qml.qrc
m-project/barcode-app/qml/: InfoScreen.qml  OtherScreen.qml  SettingScreen.qml  main.qml
m-project/barcode-app/qml/common/: MyButton.qml  MyMenu.qml  MyPasswordField.qml  MyTextField.qml
qt-qml-common/build-common-app-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
qt-qml-common/build-common-app-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_AppController.cpp  qrc_qml.cpp
qt-qml-common/common-app/: AppController.cpp  AppController.h  common-app.pro  main.cpp  qml.qrc
qt-qml-common/common-app/qml/: main.qml
qt-qml-common/common-app/qml/common/: MyButton.qml  MyComboBox.qml  MyComboBoxStyleColor.qml  MyDialog.qml
server-mini-c++/: CMakeLists.txt  READ_ME.txt  icon.rc  main.cpp  run.bat
